# PerovskiteAnalysis

./: .gitignore  PerovSim.cc  README  README.md  run1.mac
Ellipsometry/: testdataEllipso.ipynb  testdataEllipso_v2.ipynb
Ellipsometry/XRD/: readLumidata.ipynb  readRockingCurvesdata.ipynb  readXRDdata.ipynb
G4PerovSim/: CMakeLists.txt  GNUmakefile  PerovSim.cc  PerovSim.cc~  PerovSim.in  examplePerovSim.in  run2.mac  vis.mac  vis.mac~
G4PerovSim/include/: DetectorConstruction.hh  EventAction.hh  PrimaryGeneratorAction.hh  RunAction.hh  SteppingAction.hh
G4PerovSim/src/: ActionInitialization.cc  DetectorConstruction.cc  DetectorConstruction.cc~  EventAction.cc  PrimaryGeneratorAction.cc  PrimaryGeneratorAction.cc~  RunAction.cc  SteppingAction.cc
G4Scintillation/: plot.mac
G4Scintillation/include/: LXeDetectorConstruction.hh  LXeEventAction.hh  LXeMainVolume.hh  LXePMTHit.hh  LXePMTSD.hh  LXeRun.hh  LXeSiPMHit.hh  LXeSiPMSD.hh  LXeUserTrackInformation.hh
G4Scintillation/src/: LXeDetectorConstruction.cc  LXeEventAction.cc  LXeHistoManager.cc  LXeMainVolume.cc  LXePMTHit.cc  LXeRun.cc  LXeSiPMHit.cc  LXeSiPMSD.cc  LXeSteppingAction.cc  LXeTrackingAction.cc
PeroAna/: CMakeLists.txt  CMakeLists.txt_old  runreadData.sh  runreadData_nch.sh
PeroAna/cmake/: cmessage.cmake  dependencies.cmake
PeroAna/macros/: DrawPlot.C  DrawRate.ipynb  DrawWaveforms.C  ExtractSignal.C  compareRate.ipynb  compareRuns.C  compareThreeRuns.C  myAna.C  myAna.h  readruntime.ipynb  spe_Int.C
PeroAna/macros copy/: compareThreeRuns.C  fingerplot.C
PeroAna/rootinputfiles/: Run_000_Data_2_21_2024_Ascii_testread_output.root  Run_004_bulkMAPbBr3_Data_3_15_2024_Ascii_output.root  Run_005_bulkMAPbBr3_Data_3_15_2024_Ascii_output.root  Run_008_bulkMAPbBr3_Data_3_15_2024_Ascii_output.root  Run_009_bulkMAPbBr3_Data_3_15_2024_Ascii_output.root
PeroAna/src/: CMakeLists.txt  Config.h  DisplayWaveforms.cpp  Event.cpp  Event.h  PerovAna.cpp  PerovAna_nch.cpp  fft.cpp  readData.cpp  readData_nch.cpp
include/: ActionInitialization.hh  RunAction.hh
src/: DetectorConstruction.cc  EventAction.cc  RunAction.cc  SteppingAction.cc
